--- a/templates/base.html
+++ b/templates/base.html
@@ -1,36 +1,62 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>{& block title %}{% endblock title}
+    <title>{& block title %}{% endblock title}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand">Navbar</a>
+            <a class="navbar-brand" href="{% url 'home' &}">Blog</a>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-            <div class="collapse navbar-collapse" id="navbarNavAlMarkup">
-                <div class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarSupporttedContent">
+                <div class="navbar-nav me-auto mb-2 mb-lg-0">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    <a class="nav-link" href="{% url 'list' %}">All Posts</a>
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                     {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'new' %}">New Posts</a>
                     {% else %}
-                    <a href="">Log In</a>
+                    <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
                     {% endif %}
                 </div>
+                {% if user.is_authenticated %}
+                <div class="nav-item dropdown d-flex">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        {{user}}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="{% url 'drafts' %}">Drafts</a></li>
+                        <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
+
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <form method="POST" action="{% url 'logout' %}">
+                                {% csrf_token %}
+                                <input type="submit" class="dropdown-item" value="Log Out">
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+                {% endif %}
             </div>
         </div>
     </nav>
-    <div>
+    <div class="container">
         {% block content %}{% endblock content %}
     </div>
 
